--- a/app/src/main/res/drawable/edit_shape.xml
+++ b/app/src/main/res/drawable/edit_shape.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <corners android:radius="@dimen/edit_text_radius"/>
     <stroke
-        android:width="@dimen/edit_text_bord"
-        android:color="@color/edit_text_bord_color"/>
+        android:width="@dimen/edit_text_border"
+        android:color="@color/edit_text_border_color"/>
 </shape>
