--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,7 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="edit_text_bord_color">#EFEFEF</color>
+    <color name="edit_text_border_color">#E0E0E0</color>
+    <color name="fontColor">#979797</color>
+    <color name="check_box_border_color">#E0E0E0</color>
 </resources>
