--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="sign_width">164dp</dimen>
-    <dimen name="sign_height">26dp</dimen>
-    <dimen name="input_height">32dp</dimen>
-    <dimen name="input_width">268dp</dimen>
-    <dimen name="edit_text_radius">5dp</dimen>
-    <dimen name="edit_text_bord">1dp</dimen>
-    <dimen name="edit_text_padding_left">23dp</dimen>
-    <dimen name="edit_text_padding_top_and_bottom">9dp</dimen>
-    <dimen name="edit_text_size">8sp</dimen>
+    <dimen name="sign_width">171dp</dimen>
+    <dimen name="sign_height">35dp</dimen>
+    <dimen name="image_margin_top">112dp</dimen>
+
+    <dimen name="input_width">279dp</dimen>
+    <dimen name="input_height">44dp</dimen>
+    <dimen name="edit_text_radius">4dp</dimen>
+    <dimen name="edit_text_border">1dp</dimen>
+    <dimen name="edit_text_size">14dp</dimen>
+
+    <dimen name="edit_text_padding_top_and_bottom">12dp</dimen>
+    <dimen name="edit_text_padding_left">24dp</dimen>
+    <dimen name="edit_text_margin_top_to_image_bottom">68dp</dimen>
+    <dimen name="edit_text_password_top_to_username_bottom">24dp</dimen>
+    <dimen name="edit_text_line_spacing">20dp</dimen>
+
+    <dimen name="check_box_size">16dp</dimen>
+    <dimen name="check_box_radius">2dp</dimen>
+    <dimen name="check_box_border">1dp</dimen>
 </resources>
