--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="edit_text_border_color">#E0E0E0</color>
     <color name="fontColor">#979797</color>
     <color name="check_box_border_color">#E0E0E0</color>
+    <color name="check_box_font_color">#444444</color>
 </resources>
