[hzh] feat: fix edit text layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,50 +11,63 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/sign_img_margin_left_and_right"
-        android:layout_marginTop="@dimen/image_margin_top"
         android:layout_marginEnd="@dimen/sign_img_margin_left_and_right"
         android:alpha="125"
         android:contentDescription="@string/sign_text"
         android:src="@mipmap/fill_1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.138"/>
 
     <EditText
         android:id="@+id/username"
-        android:layout_width="@dimen/input_width"
-        android:layout_height="@dimen/input_height"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/edit_text_margin_left_and_right"
         android:layout_marginTop="@dimen/edit_text_margin_top_to_image_bottom"
+        android:layout_marginEnd="@dimen/edit_text_margin_left_and_right"
         android:background="@drawable/edit_shape"
         android:gravity="start"
         android:hint="@string/user_name"
         android:lineSpacingExtra="@dimen/edit_text_line_spacing"
-        android:paddingStart="@dimen/edit_text_padding_left"
+        android:paddingStart="@dimen/edit_text_padding_left_and_right"
         android:paddingTop="@dimen/edit_text_padding_top_and_bottom"
+        android:paddingEnd="@dimen/edit_text_padding_left_and_right"
         android:paddingBottom="@dimen/edit_text_padding_top_and_bottom"
         android:textColor="@color/fontColor"
         android:textSize="@dimen/edit_text_size"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sign_img" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.24"
+        android:autofillHints="username"/>
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="@dimen/input_width"
-        android:layout_height="@dimen/input_height"
-        android:layout_marginTop="@dimen/edit_text_password_top_to_username_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/edit_text_margin_left_and_right"
+        android:layout_marginTop="@dimen/edit_text_margin_top_to_image_bottom"
+        android:layout_marginEnd="@dimen/edit_text_margin_left_and_right"
         android:background="@drawable/edit_shape"
         android:gravity="start"
         android:hint="@string/password"
         android:inputType="textPassword"
-        android:paddingStart="@dimen/edit_text_padding_left"
+        android:paddingStart="@dimen/edit_text_padding_left_and_right"
         android:paddingTop="@dimen/edit_text_padding_top_and_bottom"
+        android:paddingEnd="@dimen/edit_text_padding_left_and_right"
         android:paddingBottom="@dimen/edit_text_padding_top_and_bottom"
         android:textColor="@color/fontColor"
         android:textSize="@dimen/edit_text_size"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/username" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.35"
+        android:autofillHints="password"/>
 
     <CheckBox
         android:layout_width="wrap_content"
