--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,15 +11,12 @@
 
     <dimen name="edit_text_padding_top_and_bottom">12dp</dimen>
     <dimen name="edit_text_padding_left_and_right">24dp</dimen>
-    <dimen name="edit_text_margin_top_to_image_bottom">68dp</dimen>
     <dimen name="edit_text_margin_left_and_right">48dp</dimen>
-    <dimen name="edit_text_password_top_to_username_bottom">24dp</dimen>
     <dimen name="edit_text_line_spacing">20dp</dimen>
 
     <dimen name="check_box_size">16dp</dimen>
-    <dimen name="check_box_radius">2dp</dimen>
-    <dimen name="check_box_border">1dp</dimen>
-    <dimen name="check_box_margin_left_to_parent">59dp</dimen>
-    <dimen name="check_box_margin_top_to_password">16dp</dimen>
-    <dimen name="check_box_font_size">12dp</dimen>
+    <dimen name="check_box_font_size">12sp</dimen>
+    <dimen name="check_box_margin_left_to_password">-10dp</dimen>
+    <dimen name="remember_margin_start">8dp</dimen>
+    <dimen name="remember_text_size">12sp</dimen>
 </resources>
