--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,4 +23,5 @@
     <dimen name="login_radius">24dp</dimen>
     <dimen name="login_border">1dp</dimen>
     <dimen name="login_text_size">16sp</dimen>
+    <dimen name="connect_us_text_size">12sp</dimen>
 </resources>
