--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,8 @@
     <color name="check_box_border_color">#E0E0E0</color>
     <color name="check_box_font_color">#444444</color>
     <color name="remember_color">#444444</color>
-    <color name="login_back_color">#3B5998</color>
-    <color name="login_border_color">#3B5998</color>
+    <color name="btn_color">#3B5998</color>
     <color name="login_text_color">#FFFFFF</color>
     <color name="connect_us_color">#979797</color>
+    <color name="btn_twitter_color">#55ACEE</color>
 </resources>
