--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -164,4 +164,21 @@
         app:layout_constraintVertical_bias="0.711"
         android:contentDescription="@string/facebook" />
 
+    <Button
+        android:id="@+id/sign_up_with_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/sign_up_with_email_margin_start_and_end"
+        android:layout_marginEnd="@dimen/sign_up_with_email_margin_start_and_end"
+        android:background="@drawable/btn_sign_shape"
+        android:text="@string/sign_up_text"
+        android:textAllCaps="false"
+        android:textColor="@color/sign_up_text_color"
+        android:textSize="@dimen/sign_up_text_size"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.95" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
