--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="connect_us_color">#979797</color>
     <color name="btn_twitter_color">#55ACEE</color>
     <color name="sign_up_text_color">#3B5998</color>
+    <color name="status_bar_color">#FFFFFF</color>
 </resources>
